@@ -1,3 +1,10 @@
+2006-02-02  Jean-François Rameau  <jframeau@cvs.gnome.org>
+	
+	* lib/egg/egg-editable-toolbar.c: (toolbar_visibility_refresh):
+	* src/bookmarks/ephy-topics-entry.c: (update_database):
+
+	Fix some memory leaks.
+
 2006-02-02  Peter Harvey  <peter.a.harvey@gmail.com>
 
 	* src/bookmarks/ephy-bookmark-action.c
